--- a/client/src/components/FitCheck/FitCheck.module.scss
+++ b/client/src/components/FitCheck/FitCheck.module.scss
@@ -61,7 +61,7 @@
     gap: 10px;
     font-family: $font-sans;
     font-size: 0.95rem;
-    color: $text-primary;
+    color: $text-secondary;
     line-height: 1.4;
 
     svg {
