--- a/client/src/components/AIPanel/AIPanel.module.scss
+++ b/client/src/components/AIPanel/AIPanel.module.scss
@@ -104,6 +104,23 @@
     display: flex;
     flex-direction: column;
 
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgba($accent-blue, 0.4);
+        border-radius: 3px;
+
+        &:hover {
+            background: rgba($accent-blue, 0.7);
+        }
+    }
+
     .welcome {
         flex: 1;
         display: flex;
