--- a/client/src/components/Skills/Skills.module.scss
+++ b/client/src/components/Skills/Skills.module.scss
@@ -10,6 +10,8 @@
 
 .inner {
   @include section-padding;
+  padding-top: 85px;
+  padding-bottom: 85px;
   max-width: 1000px;
   width: 100%;
   display: flex;
