--- a/client/src/components/Navbar/Navbar.module.scss
+++ b/client/src/components/Navbar/Navbar.module.scss
@@ -46,6 +46,23 @@
         }
     }
 
+    .doc-btn {
+        display: flex;
+        align-items: center;
+        opacity: 0.6;
+        transition: opacity 0.2s ease;
+
+        &:hover {
+            opacity: 1;
+        }
+
+        img {
+            height: 28px;
+            display: block;
+            padding-right: 4px;
+        }
+    }
+
     .logo {
         font-family: $font-serif;
         font-size: 1.5rem;
