--- a/client/src/components/Experience/Experience.module.scss
+++ b/client/src/components/Experience/Experience.module.scss
@@ -147,6 +147,7 @@
 
             &:hover {
                 opacity: 1;
+                color: $accent-blue-bright;
             }
 
             &--open {
