--- a/client/src/components/Projects/ProjectPanel.module.scss
+++ b/client/src/components/Projects/ProjectPanel.module.scss
@@ -93,6 +93,7 @@
   flex-shrink: 0;
   padding: 20px;
   border-right: none;
+  overflow: hidden;
   display: flex;
   align-items: flex-start;
 
@@ -113,13 +114,11 @@
 
 .image {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: block;
-  object-fit: cover;
-  object-position: top;
   border-radius: 12px;
   box-shadow: 0 0 20px rgba($accent-blue, 0.55);
-  filter:  opacity(0.55);
+  filter: opacity(0.55);
   transition: filter 0.4s ease;
 }
 
